added command panel serve

--- a/USImport_dashboard.ipynb
+++ b/USImport_dashboard.ipynb
@@ -871,7 +871,9 @@
    "id": "5b3d4674",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!panel serve USImport_dashboard.ipynb"
+   ]
   }
  ],
  "metadata": {
