--- a/USImport_dashboard.ipynb
+++ b/USImport_dashboard.ipynb
@@ -872,7 +872,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!panel serve USImport_dashboard.ipynb"
+    "!panel serve --port 8080 USImport_dashboard.ipynb"
    ]
   }
  ],
